Correctly clamp in distance formulas

The clamping of the distance formulas was incorrect.  Implement
clamping according to the spec.

BUG=718069
TEST=panner-distance-clamping.html

Review-Url: https://codereview.chromium.org/2859143004
Cr-Commit-Position: refs/heads/master@{#469824}

Former-commit-id: c8faec73855c122f94f00c54549ee6542da59e9b